# trim-dead-area

./: Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: build.yml
src/: analysis.rs  app.rs  bbox.rs  decoder.rs  export.rs  lib.rs  main.rs  writer.rs
