[package]
name = "trim-dead-area"
version = "0.1.0"
edition = "2021"
description = "Video player that trims unchanging dead areas from frames"
license = "LGPL-3.0-only"

[[bin]]
name = "trim-dead-area"
path = "src/main.rs"

[dependencies]
ffmpeg-next = "7"
eframe = "0.31"
rfd = "0.15"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
